[tool.poetry]
name = "trailer-downloader"
version = "0.1.0"
description = "Simple set of python scripts for downloading a movie trailer from Apple or from YouTube with help from TMDB."
authors = ["Chaz Larson"]
license = "GPL"
readme = "README.md"
packages = [{include = "trailer_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
tmdbsimple = "^2.9.1"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
yt-dlp = "^2023.2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
